# smalpha-bonus2

./: .gitignore  CMakeLists.txt  README.md
include/: alpha.hpp  minsmalpha.hpp  smalpha.hpp  smorse.hpp
src/: CMakeLists.txt  alpha.cpp  coding.hpp  main.cpp  minsmalpha.cpp  smalpha.cpp  smorse.cpp
tests/: CMakeLists.txt  test_alpha.cpp  test_alpha.hpp  test_alpha_main.cpp  test_minsmalpha_main.cpp
